# MixAnything

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  MyApplication.cpp  TexturedQuadShader.frag  TexturedQuadShader.h  TexturedQuadShader.vert  resources.conf  stone.tga
src/clips/: base.h  image.h  video.h
src/enum/: common.h
src/helpers/: video.h
src/shaders/effects/: gray.h  none.h
src/structs/: clip.h  mesh.h
src/utils/: common.h  mesh.h  network.h  shader.h
